# relweblearner

./: .gitignore  Dockerfile  README.md  pyproject.toml
corpus/: oracles.json  sources.json
docs/: app-reading.md  design-log.md  design-problem.md  dev-doc.md  falsification-plan.md  falsification-report.md  g7-conditional-commitment-plan.md  g8-interior-decisiveness-plan.md  g9-anti-propagation-plan.md  g9-phase-a-report.md  g9-phase-b-runbook.md  graded-ensemble-plan.md  how-it-works.md  multiweb-graphlog-plan.md  multiweb-overlap-forgery-plan.md  multiweb-overlap-forgery-referee-report.md  multiweb-overlap-forgery-referee-response.md  multiweb-plan.md  p2-discharge-referee-report-2.md  p2-discharge-referee-report.md  p2-discharge-referee-response-2.md  p2-discharge-referee-response.md  p2-discharge.md  phase-1-verification-report.md  phase-1-verification.md  phase-status.md  rule20-diagnosis-plan.md  rule20-diagnosis-referee-report.md  rule20-diagnosis-referee-response.md  rule27-diagnosis-plan.md  rule27-diagnosis-referee-report.md  rule27-diagnosis-referee-response.md  scale-substrate.md  scaling.md  spec-curiosity.md  spec-curriculum-reading.md  spec-read-write.md  spec-society.md  t0-model-data-separation.md  t1-extension-classification.md  (+8 more)
experiments/: e1_growth.py  e1b_number.py  e2_sectors.py  e2p_types.py  e3_holdout.py  e4_sweep.py  e4prime_graded.py  e5_interference.py  e6_reflection.py  e6p_simulate.py  e7_adversarial.py  e8_geometry.py  ec_curriculum.py  ec_scale.py  ec_scale_content.py  ec_store.py  el_discovery.py  el_readwrite.py  es_invention.py  (+21 more)
(+270 files in other folders)
