[project]
name = "relweblearner"
version = "0.1.0"
description = "Fixed-Algebra Growing-Web Learner"
authors = [{ name = "debjit", email = "debjit@fastmail.fm" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["numpy", "networkx", "matplotlib", "sympy", "fastapi (>=0.139.0,<0.140.0)", "uvicorn[standard] (>=0.51.0,<0.52.0)", "nltk (>=3.10.0,<4.0.0)"]

[project.scripts]
relweb-serve = "relweblearner.serve.app:main"
relweb-train = "relweblearner.train:main"
relweb-progress = "relweblearner.train:progress_main"
relweb-correct = "relweblearner.correct:main"
relweb-wonder = "relweblearner.wonder:main"
relweb-version = "relweblearner.version:main"
relweb-eval = "relweblearner.evaluate:main"

[tool.poetry]
packages = [{ include = "relweblearner", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
